# zeal

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-check.yml  codeql-analysis.yml
.github/workflows/appimage/: Dockerfile
pkg/appimage/: appimage-amd64.yml
src/app/: CMakeLists.txt
src/libs/browser/: CMakeLists.txt
src/libs/core/: CMakeLists.txt
src/libs/registry/: CMakeLists.txt
src/libs/sidebar/: CMakeLists.txt
src/libs/ui/: CMakeLists.txt
src/libs/ui/qxtglobalshortcut/: CMakeLists.txt
src/libs/ui/widgets/: CMakeLists.txt
src/libs/util/: CMakeLists.txt
